--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply text-primary bg-body;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  p{
+    @apply text-secondary
+  }
+  .h1{
+    @apply text-4xl xl:text-[64px] text-primary xl:leading-[72px] font-extrabold mb-[18px];
+  }
+  .h2{
+    @apply text-4xl mb-6 font-bold;
+  }
+  .h3{
+    @apply text-xl mb-4 font-semibold;
+  }
+  .description{
+    @apply text-base xl:text-xl xl:leading-8;
+  }
+  .section{
+    @apply w-full h-screen pt-[60px] xl:pt-[120px];
+  }
+  .btn{
+    @apply rounded-[10px] w-full uppercase font-medium text-white tracking-[2px] text-[13px] flex justify-center items-center transition-all duration-300;
+  }
+  .active{
+    @apply text-accent;
+  }
 }
