--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     @apply text-primary bg-body;
   }
   p{
-    @apply text-secondary
+    @apply text-secondary text-justify
   }
   .h1{
     @apply text-4xl xl:text-[64px] text-primary xl:leading-[72px] font-extrabold mb-[18px];
